# arkworks-demo

./: Cargo.toml  README.md  inputs.json
circuit-assets/: circuit.wasm
src/: main.rs
