[package]
name = "arkworks-demo"
version = "0.1.0"
edition = "2021"

[dependencies]
ark-circom = { git = "https://github.com/l-adic/circom-compat.git", rev = "3299bfc" }
wasmer = "4.3.0"
wasmer-wasix = { version = "0.20.0" }
thiserror = "=1.0.39"
color-eyre = "=0.6.2"
serde = "1.0"
serde_json = "1.0"
num-bigint = { version = "=0.4.3" }
num-traits = "0.2"